--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 2020.0.l
-    url: jdbc:mysql://localhost/backgroundSystem?rewriteBatchedStatements=true&useSSL=false&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://localhost/weChat?rewriteBatchedStatements=true&useSSL=false&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
   redis:
 #有则配置无则空
     password:
@@ -13,4 +13,5 @@ spring:
     port: 6379
 server:
   port: 8888
-
+mybatis:
+  mapper-locations: classpath:mapper/*.xml
